resources/node-web-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-web-app-deployment
  namespace: cloudrock-cicd-poc
spec:
  selector:
    matchLabels:
      app: node-web-app
  replicas: 3
  template:
    metadata:
      labels:
        app: node-web-app
        version: 1.1.9
    spec:
      containers:
      - name: node-web-app
        image: docker.io/sfonseca95/dockerized-node-js:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
