resources/node-web-app-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: node-web-app-route
  namespace: cloudrock-cicd-poc
spec:
  host: node-web-app-service-cloudrock-cicd-poc.apps.dp-argocd-rosa.harl.p1.openshiftapps.com
  to:
    kind: Service
    name: node-web-app-service
    weight: 100
